  longer fail to mutate the shell namespace correctly.  For example,
  this set of statements used to fail::

    In [2]: def bar(x): return x
      ...:
    In [3]: list(bar(x) for x in 'abc')
    Out[3]: NameError: 'bar'

  In this release, the ``bar`` function is found and the correct
  output is now sent to the console.  Thanks to Daniel Holth for the
  patch.

1.1b2 (2009-11-02)
==================

Bug Fixes
---------

- Prevent PyPI installation failure due to ``easy_install`` trying way
  too hard to guess the best version of Paste.  When ``easy_install``
  pulls from PyPI it reads links off various pages to determine "more
  up to date" versions. It incorrectly picks up a link for an ancient
  version of a package named "Paste-Deploy-0.1" (note the dash) when
  trying to find the "Paste" distribution and somehow believes it's
  the latest version of "Paste".  It also somehow "helpfully" decides
  to check out a version of this package from SVN.  We pin the Paste
  dependency version to a version greater than 1.7 to work around
  this ``easy_install`` bug.

Documentation
-------------

- Fix "Hybrid" narrative chapter: stop claiming that ``<view>``
  statements that mention a route_name need to come afer (in XML
  order) the ``<route>`` statement which creates the route.  This
  hasn't been true since 1.1a1.

- "What's New in ``repoze.bfg`` 1.1" document added to narrative
  documentation.

Features
--------

- Add a new event type: ``repoze.bfg.events.AfterTraversal``.  Events
  of this type will be sent after traversal is completed, but before
  any view code is invoked.  Like ``repoze.bfg.events.NewRequest``,
  This event will have a single attribute: ``request`` representing
  the current request.  Unlike the request attribute of
  ``repoze.bfg.events.NewRequest`` however, during an AfterTraversal
  event, the request object will possess attributes set by the
  traverser, most notably ``context``, which will be the context used