@@ -93,3 +93,9 @@ deprecated('get_request',
            '``repoze.bfg.request`` is '
            'deprecated.  Use ``from repoze.bfg.threadlocal import '
            'get_current_request instead.')
+
+class FakeRequest(dict):
+    def __init__(self, environ):
+        self.environ = environ
+        self.update(environ)
+        
