@@ -970,23 +970,6 @@ class TraverseTests(unittest.TestCase):
         self.assertEqual(result['view_name'], '')
         self.assertEqual(result['context'], model)
 
-class TestFakeRequest(unittest.TestCase):
-    def _makeOne(self, environ):
-        from repoze.bfg.traversal import FakeRequest
-        return FakeRequest(environ)
-
-    def test_environ(self):
-        environ = {'a':1, 'b':2}
-        request = self._makeOne(environ)
-        self.assertEqual(request.environ['a'], 1)
-        self.assertEqual(request.environ['b'], 2)
-        
-    def test_asdict(self):
-        environ = {'a':1, 'b':2}
-        request = self._makeOne(environ)
-        self.assertEqual(request['a'], 1)
-        self.assertEqual(request['b'], 2)
-
 def make_traverser(result):
     class DummyTraverser(object):
         def __init__(self, context):
