@@ -18,6 +18,17 @@ Bug Fixes
   output is now sent to the console.  Thanks to Daniel Holth for the
   patch.
 
+- The ``bfgshell`` command did not function properly; it was still
+  expecting to be able to call the root factory with a bare
+  ``environ`` rather than a request object.
+
+Backwards Incompatibilities
+---------------------------
+
+- The ``repoze.bfg.scripting.get_app`` function now expects a
+  ``request`` object as its second argument rather than an
+  ``environ``.
+
 1.1b2 (2009-11-02)
 ==================
 
